Fixed event page layout issues

--- a/ÅAHappenings/client/src/styles/Event.css
+++ b/ÅAHappenings/client/src/styles/Event.css
@@ -3,20 +3,27 @@
     text-align: center;
     font-size: 3rem;
     font-weight: bold;
-    margin: 20px 0;
 }
 
 /* Container that holds the event content */
 .event-container {
-    background-color: #f9f9f9;
+    background-color: #f9f9f9; /* Include padding/border in total height */
     width: 75%;
+    max-height:74vh;
     margin: 0 auto;
-    padding: 20px;
+    padding: 6px;
     font-family: Arial, sans-serif;
     border: 5px solid #929292;
     border-radius: 20px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    overflow-y: auto;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
 }
+
+.event-container::-webkit-scrollbar {
+    display: none;
+  }
 
 /* Grid layout for the two-column content inside the container */
 .event-content {
@@ -29,10 +36,11 @@
 .event-sidebar {
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 10px;
     border: 2px solid #c7c7c7;
     border-radius: 10px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    height:100% !important;
 }
 
 .event-organizer-section {
@@ -41,7 +49,7 @@
 }
 
 .organizer-image {
-    max-width: 150px;
+    max-width: 8rem;
     display: block;
     margin: 10px auto 0;
 }
@@ -62,14 +70,17 @@
     align-items: flex-start;
     justify-content: center;
     gap: 5px;
-    max-width: 300px;
+    max-width: 20rem;
     margin: 0 auto;
+    font-size: clamp(5px, 2rem, 15px);
 }
 
 /* Right column: Description and registration link */
 .event-main {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
+    height:100% !important;
     gap: 20px;
     border: 2px solid #c7c7c7;
     border-radius: 10px;
@@ -77,6 +88,7 @@
 }
 .section-title {
     text-align: center;
+    font-size: clamp(16px, 2rem, 30px);
 }
 
 .event-description-section {
@@ -94,6 +106,7 @@
 
 .event-link-section {
     text-align: center;
+    padding-bottom: 20px;
 }
 
 .event-link-box {
@@ -163,6 +176,7 @@
         width: 97%;
         padding: 15px;
         border-width: 3px;
+        max-height: 100vh;
     }
 
     .event-content {
